docs/7.58/md/abenprocedure_param_abexa.md
---
title: "Parameter Passing"
description: |
  This example demonstrates the difference between passing a parameter to a procedure by value or by reference. Source Code  Public class definition CLASS cl_demo_procedure_param DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. TYPES:
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenprocedure_param_abexa.htm"
abapFile: "abenprocedure_param_abexa.htm"
keywords: ["loop", "do", "if", "case", "method", "class", "data", "types", "internal-table", "abenprocedure", "param", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Program Structure](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_program_layout.htm) →  [Modularization Statements](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_language_modularization.htm) →  [Procedures](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_language_procedures.htm) →  [Parameter Interface of Procedures](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenformal_parameters_oview.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20Parameter%20Passing%2C%20ABENPROCEDURE_PARAM_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

Parameter Passing

This example demonstrates the difference between passing a parameter to a procedure by value or by reference.

Source Code   

\* Public class definition
CLASS cl\_demo\_procedure\_param DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
    TYPES: BEGIN OF line,
             x     TYPE i,
             y     TYPE i,
             range TYPE i,
           END OF line.
    DATA: param TYPE STANDARD TABLE OF line,
          res   TYPE i.
    METHODS:
      fill\_table  CHANGING  g\_param LIKE param,
      solve\_table IMPORTING g\_param LIKE param,
      fibb IMPORTING VALUE(l\_line) TYPE line
           EXPORTING VALUE(r)      TYPE i.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_procedure\_param IMPLEMENTATION.
  METHOD main.
    fill\_table(  CHANGING  g\_param = param ).
    solve\_table( EXPORTING g\_param = param ).
  ENDMETHOD.
  METHOD fibb.
    IF l\_line-range = 1.
      IF l\_line-x < l\_line-y.
        r = l\_line-x.
      ELSE.
        r = l\_line-y.
      ENDIF.
    ELSEIF l\_line-range = 2.
      IF l\_line-x < l\_line-y.
        r = l\_line-y.
      ELSE.
        r = l\_line-x.
      ENDIF.
    ELSE.
      l\_line-range -= 2.
      DO l\_line-range TIMES.
        IF l\_line-x < l\_line-y.
          l\_line-x += l\_line-y.
          r = l\_line-x.
        ELSE.
          l\_line-y += l\_line-x.
          r = l\_line-y.
        ENDIF.
      ENDDO.
    ENDIF.
  ENDMETHOD.
  METHOD fill\_table.
    g\_param = VALUE #( FOR j = 1 UNTIL j > 3
                       ( x = j
                         y = j \*\* 2
                         range = 12 / j ) ).
  ENDMETHOD.
  METHOD solve\_table.
    DATA l\_line LIKE LINE OF g\_param.
    LOOP AT g\_param INTO l\_line.
      fibb( EXPORTING l\_line = l\_line IMPORTING r = res ).
      out->write(
      |Fibb( { l\_line-x }, { l\_line-y }, { l\_line-range }) = { res }| ).
    ENDLOOP.
  ENDMETHOD.
ENDCLASS.

Description   

The method fibb calculates the sequence term with the number range in a Fibonacci sequence with the start values x and y. In this case, the next sequence term is always the sum of two previous sequence terms (that is, two start values). The method inherits two parameters, a structured parameter l\_line with which input values are passed, and a parameter r of type i used to provide the result. Since the parameter l\_line is defined as an IMPORTING parameter but still has to be changed in the method, the keyword VALUE must be set before the parameter when the method is defined. Otherwise, a syntax error occurs. This ensures that a local copy of the parameter is used within the method. The addition VALUE of the output parameter r assigns the result to the static class attribute res only after the method has been processed completely. Otherwise res would be changed for each step of the algorithm.

The internal table param contains the input values for calculating three different sequence terms of the Fibonacci sequence. The method fill\_table is used to provide param with values and the method solve\_table is used to calculate and output fibb for each line of param.